[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation_exporter"
version = "0.2.0"
description = "Exports annotations from a eCRF PDF"
readme = "README.rst"
authors = [
  {name = "Salomo Sparna", email = "salomosparna@gmail.com"}
]
maintainers = [
  {name = "Salomo Sparna", email = "salomosparna@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ssparna/annotation_exporter/issues"
changelog = "https://github.com/ssparna/annotation_exporter/blob/master/changelog.md"
homepage = "https://github.com/ssparna/annotation_exporter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

